--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         "twig/twig": "~1"
     },
     "autoload": {
-        "psr-4": {"BW\\SkeletonBundle\\": ""}
+        "psr-4": {"LapaLabs\\SkeletonBundle\\": ""}
     }
 }
